Implementacion de Especialista de Salud y modificacion en  creacion automatica de usuarios
-Implementé Especialista de Salud agregandole especialidades,
-Al crearse un usuario de paciente automaticamente verifica que no exista un usuario homonimo, si existe le agrega un numero al final

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_especialista_salud.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_especialista_salud.html
@@ -75,6 +75,10 @@
                                 <label for="{{form.cargos.name}}">{{form.cargos.label}}</label>
                                 {{form.trabajos_realizados}}
                             </div>
+                            <div class="form-group">
+                                <label for="{{form.especialidades.name}}">{{form.especialidades.label}}</label>
+                                {{form.especialidades}}
+                            </div>
 
                          </table>
                     </div>
