--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_persona.html
@@ -145,8 +145,8 @@
                                 <br>
                                 <div id="especialista_salud" style="display: none;">
                                     <div class="form-group">
-                                        <label for="{{form4.cargos.name}}">{{form4.cargos.label}}</label>
-                                        {{form4.trabajos_realizados}}
+                                        <label for="{{form4.especialidades.name}}">{{form4.especialidades.label}}</label>
+                                        {{form4.especialidades}}
                                     </div>
                                 </div>
 
