--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_antecedente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_antecedente.html
@@ -18,7 +18,7 @@
     <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>                 
-            <center><h4 style="font:;">Ingrese su antecedente clinico</h4></center>
+            <center><h4>Ingrese su antecedente clinico</h4></center>
         </div>
  <br>
            <form method="POST">
@@ -80,7 +80,7 @@
         <hr>
              <div class="d-flex justify-content-center">
                         <button class="btn btn-success" type="submit" style="margin: 10px;">Guardar</button>
-                        <a href=" /administrativo/editar_antecedente/{{user.numero_documento}} " class="btn btn-danger" style="margin: 10px;">Cancelar</a>
+                        <a href=" /panel_control/inicio/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
                     </div>
                 </div>
             </form>
