--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_especialista_salud.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_especialista_salud.html
@@ -73,6 +73,10 @@
                             <div class="form-group">
                                 <label for="{{form.trabajos_realizados.name}}">{{form.trabajos_realizados.label}}</label>
                                 {{form.trabajos_realizados}}
+                            </div>
+                            <div class="form-group">
+                                <label for="{{form.especialidades.name}}">{{form.especialidades.label}}</label>
+                                {{form.especialidades}}
                             </div> 
                             <!-- {{form2.as_p}} -->
                             <!-- {{form.as_p}} -->
