--- a/Proyecto2/SmileSoft/webapp/templates/inicio/password_reset_done.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/password_reset_done.html
@@ -37,9 +37,22 @@
                     <section class="PasswordResetDone">
                         <h3>Correo Enviado</h3>
                         <br>
-                        <FONT SIZE=5>  <p>Hemos enviado un correo electrónico con las instrucciones <br>
-                            <b>para recuperar su contraseña</p></b></font>
-                      
+                        <FONT SIZE=5>  
+                            <p>
+                                Hemos enviado un correo electrónico con las instrucciones 
+                                <br>
+                                <b>para recuperar su contraseña</b>
+                                <br>
+                                
+                            </p>
+                        </FONT>
+                        <font>
+                            Si no encuentra el mensaje por favor 
+                                <br>
+                                revise en su bandeja de correo no deseado o spam.
+                                <br>
+                        </font>
+                        <br>
 
                         <a href="/login/" class="btn btn-primary" >  
                             <i class="bi bi-house"></i>
