--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_persona.html
@@ -8,7 +8,7 @@
             <center>  <h2>Datos Personales</h2> </center>    
                   <!-- Tooltip. -->
                 <div class="container mt-3 text-center">
-                    <small> <b>   ¡ Modificar los datos de {{user.usuario}}! </small>
+                    <small> <b>   ¡ Modificar los datos de {{persona.nombre}} {{persona.apellido}}! </small>
                 </div>
             
             <div class="card-body">
@@ -61,7 +61,7 @@
 
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-primary" type="submit" style="margin: 10px;">Guardar</button>
-                        <a href="/administrativo/listar_persona/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
+                        <a href="/panel_control/inicio/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
                     </div>
                     <hr>
                     {% comment %} <table  align="right" >
