--- a/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
@@ -42,9 +42,9 @@
                     <!--no borrar-->
                     <div align="center">  
                         <a  class="navbar-brand" href="/panel_control/invitado/">   
-                          <strong style="color:#045F5F; font-size:22px;"> <i class="bi bi-at"></i> Inicio </strong>                         
+                          <strong style="color:#045F5F; font-size:20px;"> <i class="bi bi-at"></i> Inicio </strong>                         
                           
-                             <img class="img-circle"  src="{% static 'img/favicon.png' %}"  width="80px" height="80px"> 
+                             <img class="img-circle"  src="{% static 'img/favicon.png' %}"  width="60px" height="60px"> 
                         </a>
                     </div>
                 </div>
@@ -55,10 +55,10 @@
     </header>
 	    <main>  
             {% comment %} <div id="login" > {% endcomment %}
-            <h2 class="text-center text-gray pt-5">  SmileSoft </h2>
+            <h2 class="text-center text-gray pt-1">  SmileSoft </h2>
             {% comment %} <div align="center"> <img width="100" height="100" src="https://cdn-icons.flaticon.com/png/512/5645/premium/5645053.png?token=exp=1649214401~hmac=c048440d327bb79136bc7577123be615" alt="" title="" class="loaded"></div> {% endcomment %}
             {% comment %} <img width="100" height="100" src="https://cdn-icons.flaticon.com/png/512/5645/premium/5645309.png?token=exp=1649214393~hmac=038a0d1b47301bd32dbb95dcef08f7ae" alt="" title="" class="loaded">  {% endcomment %}
-            <div align="center">  <img src="{% static 'img/inicio.png' %}"  width="100" height="100"> </div>
+            {% comment %} <div align="center">  <img src="{% static 'img/inicio.png' %}"  width="70" height="70"> </div> {% endcomment %}
             <div class="container">
                 <div id="login-row" class="row justify-content-center align-items-center">
                     <div id="login-column" class="col-md-6">
