agregando gestion_agendamiento

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/contacto.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/contacto.html
@@ -18,6 +18,8 @@
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="assets/css/styles.css">
+	   <!--es para los iconos-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 	<!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
 </head>
@@ -37,11 +39,11 @@
 				
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/panel_control/invitado/">
-                         <strong style="color:blue; font-size:16px;">  Inicio </strong> 
+                         <strong style="color:blue; font-size:16px;">  <i class="bi bi-house-fill"></i> Inicio </strong> 
                                               </a>
                     </li>
                     <li class="active"><a href="/panel_control/contacto/">
-                         <strong style="color:blue; font-size:16px;">  Contacto </strong> 
+                         <strong style="color:blue; font-size:16px;"> <i class="bi bi-at"></i> Contacto </strong> 
                                               </a>
                     </li>
 				</ul>
