--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/corona_dental.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/corona_dental.html
@@ -139,7 +139,7 @@
 					<p>(0985) 571 842<br>
 						<a href="">consultdent9596@gmail.com</a><br>
 					
-                        <a href="">teamsmilesoft@gmail.com</a><br>
+                        {% comment %} <a href="">teamsmilesoft@gmail.com</a><br> {% endcomment %}
 						
 					</p>	
 				</div>
