--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/registrarse.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/registrarse.html
@@ -40,6 +40,11 @@
                                 <strong style="color:blue; font-size:16px;"> <i class="bi bi-at"></i> Contacto </strong> 
                                                     </a>
                             </li>
+                            
+                            <li class="active"><a href="/login/">
+                                <strong style="color:blue; font-size:16px;"><i class="bi bi-person-bounding-box"></i> Iniciar Sesión</strong> 
+                                                    </a>
+                            </li>
                         </ul>
                     
                     </div><!--/.nav-collapse -->			
@@ -79,7 +84,7 @@
 					<p>(0985) 571 842<br>
 						<a href="">consultdent9596@gmail.com</a><br>
 					
-                        <a href="">teamsmilesoft@gmail.com</a><br>
+                        {% comment %} <a href="">teamsmilesoft@gmail.com</a><br> {% endcomment %}
 						
 					</p>	
 				</div>
