--- a/Proyecto2/SmileSoft/webapp/templates/inicio/consultar_documento.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/consultar_documento.html
@@ -13,6 +13,12 @@
             
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
+        <!-- Icon font -->
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <!-- Fonts -->
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
+        <!-- Custom styles -->
+        <link rel="stylesheet" href="assets/css/styles.css">
         <!--css una libreria-->
         <link rel="stylesheet" href="css/bootstrap.min.js" crossorigin="anonymous">
 
@@ -25,26 +31,6 @@
  
 
     <body>
-        <header id="header">
-            <nav class="navbar navbar-expand-sm bg-transparent navbar-transparent justify-content-end logo ">
-                    <div class="container-fluid">
-                        <!--no borrar-->
-                        <a class="nav-link active" aria-current="page" href="#"></a>
-                                <a class="nav-link" href="#"></a>
-                                <a class="nav-link" href="#"></a>
-                                <a class="nav-link disabled"></a>
-                        <!--no borrar-->
-                        <div align="center">  
-                            <a  class="navbar-brand" href="/panel_control/invitado/">   
-                            <strong style="color:#045F5F; font-size:22px;"> <i class="bi bi-at"></i> Inicio </strong>                         
-                            
-                                <img class="img-circle"  src="{% static 'img/favicon.png' %}"  width="80px" height="80px"> 
-                            </a>
-                        </div>
-                    </div>
-                    
-                </nav>  
-     </header>
         <main>
                 <!--Inicio de Sesion bloque-->
                 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -85,9 +71,10 @@
                                     </div>
 
                                 </div>
-                            
-                                        
-                                <br>
+                             <div class="container mt-3 text-center">
+                                <a href="/login/" data-toggle="tooltip" title="Regresa al inicio"> <i class="bi bi-house-door"></i>Inicio</a>
+                            </div>
+          
                                 <br>
                                 <br>
                                
