--- a/Proyecto2/SmileSoft/webapp/templates/usuario/success.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/success.html
@@ -6,7 +6,7 @@
         <center>
             <h3>Contraseña modificada exitosamente</h3>
             <br>
-            <a href="/panel_control/inicio/" class="btn btn-success" type="button">OK</a>
+            <a href="/panel_control/inicio/" class="btn btn-success" type="button">Aceptar</a>
         </center>
     </table>
 {% endblock %}
