--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/invitado.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/invitado.html
@@ -50,13 +50,13 @@
                 </div>	
             </nav>
             <div id="head" class="parallax" parallax-speed="2">
-                <h1 id="logo" class="text-center">
+                <h3 id="logo" class="text-center">
                     {% comment %} <img class="img-circle" src="assets/images/guy.jpg" alt=""> {% endcomment %}
-                    <img class="img-circle"  src="{% static 'img/favicon.png' %}" width="80px" alt="auto">
-                    <span class="title">SmileSoft</span>
+                    <img class="img-circle"  src="{% static 'img/favicon.png' %}" width="70px" alt="auto">
+                    {% comment %} <span class="title">SmileSoft</span> {% endcomment %}
                     <span class="tagline">Servicios odontológicos, al mejor precio<br>
-                        <a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">teamsmilesoft@gmail.com</a></span>
-                </h1>
+                        {% comment %} <a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">teamsmilesoft@gmail.com</a></span> {% endcomment %}
+                </h3>
             </div>
         </div>
   
@@ -214,7 +214,7 @@
 					<p>(0985) 571 842<br>
 						<a href="">consultdent9596@gmail.com</a><br>
 					
-                        <a href="">teamsmilesoft@gmail.com</a><br>
+                        {% comment %} <a href="">teamsmilesoft@gmail.com</a><br> {% endcomment %}
 						
 					</p>	
 				</div>
