--- a/Proyecto2/SmileSoft/webapp/templates/inicio/confirmacion_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/confirmacion_usuario.html
@@ -12,7 +12,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
+         <!-- Icon font -->
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <!-- Fonts -->
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
         <!--css una libreria-->
         <link rel="stylesheet" href="css/bootstrap.min.js" crossorigin="anonymous">
 
@@ -40,14 +43,15 @@
             <br>
             <br>
             <h2 class="text-center text-gray pt-5">SmileSoft</h2>
-            <img src="{% static 'img/favicon.png' %}" width="120px" alt="logo">
+            <img src="{% static 'img/favicon.png' %}" width="98px" alt="logo">
         </div>
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-5">
                         <!-- <table> -->
-                        <h3 class="text-center text-Gray"><i>¡Atención!</i> </h3>
-                        <div class="row justify-content-center align-items-center">
+                        <h3 class="text-center text-Gray">¡Atención!</h3>
+                        <br>
+                        <div class="row justify-content-center ">
                             <p class="text-justify">
                                 <i>
                                     Usted ya cuenta con un usuario. ¿Desea iniciar sesión?
@@ -56,7 +60,7 @@
                         </div>
                         <div>
                             <div align="center" > 
-                                <a href="/login/" class="btn btn-primary " style="width: 70px">OK</a>
+                                <a href="/login/" class="btn btn-primary " style="width: 80px">Aceptar</a>
                                 
                             </div>
                             <br>
