--- a/Proyecto2/SmileSoft/webapp/templates/inicio/mensaje_envio_correo.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/mensaje_envio_correo.html
@@ -35,21 +35,22 @@
             <br>
             <br>
             <br>
-            <h5 class="text-center text-gray pt-5">SmileSoft</h5>
-            <img src="{% static 'img/favicon.png' %}" width="120px" alt="logo">
+            <h3 class="text-center text-gray pt-5">SmileSoft</h3>
+            <img src="{% static 'img/favicon.png' %}" width="100px" alt="logo">
         </div>
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-5">
                         <!-- <table> -->
-                        <h3 class="text-center text-Gray"><i>¡ LISTO !</i> </h3>
+                        <h4 class="text-center text-Gray"><i>¡ LISTO !</i> </h4><br>
                         <div class="row justify-content-center align-items-center">
                             <!-- <div class="col-md-10"> -->
                             <p class="text-justify">
                                 <i>
-                                    ¡Cuenta de usuario creado con exito!
-                                    Le ha sido enviado su usuario y contraseña 
-                                    al correo electrónico que usted ha registrado. 
+                                          ✔︎¡Cuenta de usuario creado con exito!
+                                   <br> Le ha sido enviado su usuario y contraseña 
+                                    al <b>correo electrónico</b>
+                                         que usted ha registrado. 
                                 </i>
                                 <i>
                                     Por favor reviselo e ingrese esos datos para iniciar sesión.
@@ -59,7 +60,7 @@
                         </div>
                         <div>
                             <div align="center" > 
-                                <a style="width: 50px;" href="/login/" class="btn btn-success"> OK </a>
+                                <a style="width: 80px;" href="/login/" class="btn btn-success"> Aceptar</a>
                             </div>
                 </div>
             </div>
