--- a/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
@@ -42,7 +42,7 @@
                     <!--no borrar-->
                     <div align="center">  
                         <a  class="navbar-brand" href="/panel_control/invitado/">   
-                          <strong style="color:#045F5F; font-size:21px;"> <i class="bi bi-at"></i> Inicio </strong>                         
+                          <strong style="color:#045F5F; font-size:20px;"> <i class="bi bi-at"></i> Inicio </strong>                         
                           
                              <img class="img-circle"  src="{% static 'img/favicon.png' %}"  width="60px" height="60px"> 
                         </a>
@@ -54,18 +54,17 @@
         </div>
     </header>
 	    <main>  
-            {% comment %} <div id="login" > {% endcomment %}
-            <h2 class="text-center text-gray pt-1">  SmileSoft </h2>
-            {% comment %} <div align="center"> <img width="100" height="100" src="https://cdn-icons.flaticon.com/png/512/5645/premium/5645053.png?token=exp=1649214401~hmac=c048440d327bb79136bc7577123be615" alt="" title="" class="loaded"></div> {% endcomment %}
-            {% comment %} <img width="100" height="100" src="https://cdn-icons.flaticon.com/png/512/5645/premium/5645309.png?token=exp=1649214393~hmac=038a0d1b47301bd32dbb95dcef08f7ae" alt="" title="" class="loaded">  {% endcomment %}
-            {% comment %} <div align="center">  <img src="{% static 'img/inicio.png' %}"  width="70" height="70"> </div> {% endcomment %}
-            <div class="container">
-                <div id="login-row" class="row justify-content-center align-items-center">
-                    <div id="login-column" class="col-md-6">
-                        <div class="login-box col-md-12">
-
-                            {% comment %} action="{% url 'django.contrib.auth.views.login' %}" {% endcomment %}
-                            <form id="login-form" class="form-signin" action="" method="post">
+        {% comment %} <h2 class="text-center text-gray pt-5">  SmileSoft </h2> {% endcomment %}
+      
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-6">
+                    <div class="login-box col-md-12">
+                        <form id="login-form" class="form-signin" action="" method="post">
+                            {% csrf_token %}
+                            <h3 class="text-center text-Gray">¡Bienvenido!</h3>
+                              <div align="center">  <img src="{% static 'img/inicio.png' %}"  width="92" height="92"> </div>
+                            <div class="form-group">
                                 {% csrf_token %}
                                 <label for="usuario" class="text-Gray"> Usuario:</label><br>
                                 <input type="text" name="usuario" id="usuario" class="form-control">
@@ -84,27 +83,6 @@
                                     </span>
                                 </label>
                                 <br>
-
-                                <h3 class="text-center text-Gray">¡Bienvenido!</h3>
-                                <div class="form-group">
-                                    {% csrf_token %}
-                                    <label for="usuario" class="text-Gray"> Usuario:</label><br>
-                                    <input type="text" name="usuario" id="usuario" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    {% csrf_token %}
-                                    <label for="password1" class="text-Gray">Contraseña:</label><br>
-                                    <input type="password" name="password1" id="password1" class="form-control">
-                                </div>
-                                <div class="form-group" >
-                                    {% csrf_token %}
-                                    <label for="remember-me" class="text-Gray">
-                                        <span>Recordar</span>
-                                        <span>
-                                            <input id="remember-me" name="remember-me" type="checkbox"></input>
-                                        </span>
-                                    </label>
-                                    <br>
                                 <div  align="center" > <input type="submit" value="Iniciar Sesión" class="btn btn-info btn-md"> </div>
                             </div>
                             <div id="register-link" class="text-right">
@@ -116,7 +94,7 @@
                             </div>
                             <br>
                            {% csrf_token %}
-                            <div class="alert alert-success" role="alert">
+                            <div class="alert alert-primary" role="alert">
                                 <ul class="messages">
                                     {% for message in messages %}
                                         <li{% if message.tags %}
