--- a/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
@@ -42,9 +42,9 @@
                     <!--no borrar-->
                     <div align="center">  
                         <a  class="navbar-brand" href="/panel_control/invitado/">   
-                          <strong style="color:#045F5F; font-size:22px;"> <i class="bi bi-at"></i> Inicio </strong>                         
+                          <strong style="color:#045F5F; font-size:20px;"> <i class="bi bi-at"></i> Inicio </strong>                         
                           
-                             <img class="img-circle"  src="{% static 'img/favicon.png' %}"  width="80px" height="80px"> 
+                             <img class="img-circle"  src="{% static 'img/favicon.png' %}"  width="60px" height="60px"> 
                         </a>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
         </div>
     </header>
 	    <main>  
-        <h2 class="text-center text-gray pt-5">  SmileSoft </h2>
+        <!-- <h2 class="text-center text-gray pt-5">  SmileSoft </h2> -->
         <div align="center">  <img src="{% static 'img/inicio.png' %}"  width="100" height="100"> </div>
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
