--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/contacto.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/contacto.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="assets/css/styles.css">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 
 	<!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
 </head>
@@ -37,15 +38,17 @@
 				
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/panel_control/invitado/">
-                         <strong style="color:blue; font-size:16px;">  Inicio </strong> 
+                         <strong style="color:blue; font-size:16px;"> 
+							 <i class="bi bi-house-fill"></i> Inicio 
+						</strong> 
                                               </a>
                     </li>
-                    <li class="active"><a href="/panel_control/contacto/">
-                         <strong style="color:blue; font-size:16px;">  Contacto </strong> 
-                                              </a>
-                    </li>
-				</ul>
-			
+                    <li class="active">
+						<a href="/panel_control/contacto/">
+                        	<strong style="color:blue; font-size:16px;"> <i class="bi bi-at"></i> Contacto </strong>
+						</a>
+					</li>
+				</ul>			
 			</div><!--/.nav-collapse -->			
 		</div>	
 	</nav>
@@ -64,7 +67,7 @@
 					<p>(0985) 571 842<br>
 						<a href="">consultdent9596@gmail.com</a><br>
 					
-                        <a href="">teamsmilesoft@gmail.com</a><br>
+                        <!-- <a href="">teamsmilesoft@gmail.com</a><br> -->
 						
 					</p>	
 				</div>
