--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/corona_dental.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/corona_dental.html
@@ -50,7 +50,7 @@
                 <h1 id="logo" class="text-center">
                     {% comment %} <img class="img-circle" src="assets/images/guy.jpg" alt=""> {% endcomment %}
                     <img class="img-circle"  src="{% static 'img/favicon.png' %}" width="80px" alt="auto">
-                    <span class="title">SmileSoft</span>
+                    <!-- <span class="title">SmileSoft</span> -->
                     <span class="tagline">Servicios odontológicos, al mejor precio<br>
                        
                 </h1>
