--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/invitado.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/invitado.html
@@ -53,9 +53,9 @@
                 <h1 id="logo" class="text-center">
                     {% comment %} <img class="img-circle" src="assets/images/guy.jpg" alt=""> {% endcomment %}
                     <img class="img-circle"  src="{% static 'img/favicon.png' %}" width="80px" alt="auto">
-                    <span class="title">SmileSoft</span>
+                    <span class="title">ConsulDent</span>
                     <span class="tagline">Servicios odontológicos, al mejor precio<br>
-                        <a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">teamsmilesoft@gmail.com</a></span>
+                        <!-- <a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">teamsmilesoft@gmail.com</a></span> -->
                 </h1>
             </div>
         </div>
