Correción de Agregar y Modificar persona e impldementacion de Tratamientos asignados
-He modidficado la funcion de Registro de Datos Personales, moviendo de lugar la opcion agregar como paciente para corregir error al guardar
-Implementacion del boton Tratamientos asignados en Asignacion de Tratamientos al paciente

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente2.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente2.html
@@ -46,7 +46,7 @@
 					<i class="bi-pencil-square"></i>
 					Asignar Tratamientos
 				</a>
-				<a class="btn btn-info" href="/tratamiento/tratamientos_asignados/{{ paciente.id_paciente }}">
+				<a class="btn btn-info" href="/tratamiento/listar_tratamientos_asignados/{{paciente.numero_documento}}">
 					<i class="bi-eye-fill"></i>
 					Tratamientos asignados
 				</a>
