--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_persona.html
@@ -58,6 +58,10 @@
 										Eliminar
 									</a>
 									{%endif%}
+									<a class="btn btn-info" href="/administrativo/modificar_persona_paciente/{{persona.numero_documento}}">
+										<i class="bi bi-person-plus-fill"></i>
+										Agregar como paciente
+									</a>
 								</td>
 							</tr>
 							{% endfor %}
