--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_persona.html
@@ -74,7 +74,7 @@
                                 <hr>
                                 <!-- Agregar Funcionario -->
                                 <div>
-                                    <input type="button" id="boton_funcionario" value="+ Agregar como funcionario" onclick="mostrar_ocultar_funcionario()">
+                                    <input class="btn btn-outline-secondary" type="button" id="boton_funcionario" value="+ Agregar como funcionario" onclick="mostrar_ocultar_funcionario()">
                                     </input>
                                 </div>
                                 <br>
@@ -85,12 +85,29 @@
                                     </div>
                                 </div> 
                                 <hr>
-                                <!-- Agregar Paciente -->
+                                <!-- Agregar Especialista de Salud -->
                                 <div>
-                                    <input type="button" id="boton_paciente" value="+ Agregar como paciente" onclick="mostrar_ocultar_paciente();"></input>
+                                    <input class="btn btn-outline-secondary" type="button" id="boton_especialista_salud" value="+ Agregar como especialista de salud" onclick="mostrar_ocultar_especialista();"></input>
                                 </div>
                                 <br>
-                                <div id="paciente" style="display: none;">
+                                <div id="especialista_salud" style="display: none;">
+                                    <div class="form-group">
+                                        <label for="{{form4.especialidades.name}}">{{form4.especialidades.label}}</label>
+                                        {{form4.especialidades}}
+                                    </div>
+                                </div>
+                                <hr>
+                                <!-- Agregar Paciente -->
+                                <!-- <div>
+                                    <a href="/administrativo/agregar_persona_paciente/{form.numero_documento} " class="btn btn-outline-secondary">
+                                        + Agregar como paciente
+                                    </a> -->
+                                    <!-- <button type="button" class="btn btn-outline-secondary" href="/administrativo/agregar_persona_paciente//{{form.numero_documento}}">
+                                        + Agregar como paciente
+                                    </button> -->
+                                <!-- </div>
+                                <br> -->
+                                <!-- <div id="paciente" style="display: none;">
                                     <div class="form-group">
                                         <label for="{{form3.grupo_sanguineo.name}}">{{form3.grupo_sanguineo.label}}</label>
                                         {{form3.grupo_sanguineo}}
@@ -136,20 +153,7 @@
                                         {{form3.afeccion_cronica_familiar}}
                                     </div>
                                     <br>
-                                </div> 
-                                <hr>
-                                <!-- Agregar Especialista de Salud -->
-                                <div>
-                                    <input type="button" id="boton_especialista_salud" value="+ Agregar como especialista de salud" onclick="mostrar_ocultar_especialista();"></input>
-                                </div>
-                                <br>
-                                <div id="especialista_salud" style="display: none;">
-                                    <div class="form-group">
-                                        <label for="{{form4.especialidades.name}}">{{form4.especialidades.label}}</label>
-                                        {{form4.especialidades}}
-                                    </div>
-                                </div>
-
+                                </div> -->
                                 <div class="d-flex justify-content-center">
                                     <button class="btn btn-primary" type="submit" style="margin: 10px;">
                                         <i class="bi-save"></i>
@@ -181,23 +185,23 @@
                                     }
                                 
                                     // Paciente
-                                    function mostrar_paciente(){
-                                        document.getElementById('paciente').style.display = 'block';
-                                    }
-                                    function ocultar_paciente(){
-                                        document.getElementById('paciente').style.display = 'none';
-                                    }
-                                    function mostrar_ocultar_paciente(){
-                                        var paciente = document.getElementById('paciente');
-                                        if(paciente.style.display == 'none'){
-                                            mostrar_paciente()
-                                            document.getElementById('boton_paciente').value = 'Ocultar';
-                                        }
-                                        else{
-                                            ocultar_paciente()
-                                            document.getElementById('boton_paciente').value = '+ Agregar como paciente';
-                                        }
-                                    }
+                                    // function mostrar_paciente(){
+                                    //     document.getElementById('paciente').style.display = 'block';
+                                    // }
+                                    // function ocultar_paciente(){
+                                    //     document.getElementById('paciente').style.display = 'none';
+                                    // }
+                                    // function mostrar_ocultar_paciente(){
+                                    //     var paciente = document.getElementById('paciente');
+                                    //     if(paciente.style.display == 'none'){
+                                    //         mostrar_paciente()
+                                    //         document.getElementById('boton_paciente').value = 'Ocultar';
+                                    //     }
+                                    //     else{
+                                    //         ocultar_paciente()
+                                    //         document.getElementById('boton_paciente').value = '+ Agregar como paciente';
+                                    //     }
+                                    // }
                                 
                                     // Especialista de salud
                                     function mostrar_especialista_salud(){
