--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_persona.html
@@ -59,7 +59,7 @@
                             <br>
                             <!-- Modificar Funcionario -->
                             <div>
-                                <input type="button" id="boton_funcionario" value="+ Agregar como funcionario" onclick="mostrar_ocultar_funcionario()">
+                                <input class="btn btn-outline-secondary" type="button" id="boton_funcionario" value="+ Agregar como funcionario" onclick="mostrar_ocultar_funcionario()">
                                 </input>
                             </div>
                             <br>
@@ -70,62 +70,9 @@
                                 </div>
                             </div>
                             <hr>
-                            <!-- Agregar Paciente -->
-                            <div>
-                                <input type="button" id="boton_paciente" value="+ Agregar como paciente" onclick="mostrar_ocultar_paciente();"></input>
-                            </div>
-                            <br>
-                            <div id="paciente" style="display: none;">
-                                <div class="form-group">
-                                    <label for="{{form3.grupo_sanguineo.name}}">{{form3.grupo_sanguineo.label}}</label>
-                                    {{form3.grupo_sanguineo}}
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="{{form3.enfermedad_base.name}}">{{form3.enfermedad_base.label}}</label>
-                                    {{form3.enfermedad_base}}
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="{{form3.alergia.name}}">{{form3.alergia.label}}</label>
-                                    {{form3.alergia}}
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="{{form3.intolerancia_anestecia.name}}">{{form3.intolerancia_anestecia.label}}</label>
-                                    {{form3.intolerancia_anestecia}}
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="{{form3.frecuencia_higiene_bucal.name}}">{{form3.frecuencia_higiene_bucal.label}}</label>
-                                    {{form3.frecuencia_higiene_bucal}}
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="{{form3.medicamento.name}}">{{form3.medicamento.label}}</label>
-                                    {{form3.medicamento}}
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="{{form3.cirugias.name}}">{{form3.cirugias.label}}</label>
-                                    {{form3.cirugias}}
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="{{form3.caries.name}}">{{form3.caries.label}}</label>
-                                    {{form3.caries}}
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="{{form3.afeccion_cronica_familiar.name}}">{{form3.afeccion_cronica_familiar.label}}</label>
-                                    {{form3.afeccion_cronica_familiar}}
-                                </div>
-                                <br>
-                            </div>
-                            <hr>
                             <!-- Agregar Especialista de Salud -->
                             <div>
-                                <input type="button" id="boton_especialista_salud" value="+ Agregar como especialista de salud" onclick="mostrar_ocultar_especialista();"></input>
+                                <input class="btn btn-outline-secondary" type="button" id="boton_especialista_salud" value="+ Agregar como especialista de salud" onclick="mostrar_ocultar_especialista();"></input>
                             </div>
                             <br>
                             <div id="especialista_salud" style="display: none;">
@@ -133,7 +80,8 @@
                                     <label for="{{form4.especialidades.name}}">{{form4.especialidades.label}}</label>
                                     {{form4.especialidades}}
                                 </div>
-                            </div> 
+                            </div>
+                            <hr>
                         </table>
                     </div>
 
@@ -162,24 +110,6 @@
                                 document.getElementById('boton_funcionario').value = '+ Agregar como funcionario';
                             }
                         }
-                        // Paciente
-                        function mostrar_paciente(){
-                            document.getElementById('paciente').style.display = 'block';
-                        }
-                        function ocultar_paciente(){
-                            document.getElementById('paciente').style.display = 'none';
-                        }
-                        function mostrar_ocultar_paciente(){
-                            var paciente = document.getElementById('paciente');
-                            if(paciente.style.display == 'none'){
-                                mostrar_paciente()
-                                document.getElementById('boton_paciente').value = 'Ocultar';
-                            }
-                            else{
-                                ocultar_paciente()
-                                document.getElementById('boton_paciente').value = '+ Agregar como paciente';
-                            }
-                        }
                         // Especialista de salud
                         function mostrar_especialista_salud(){
                             document.getElementById('especialista_salud').style.display = 'block';
@@ -201,12 +131,6 @@
                     </script>
                     <!------------ Fin de Bloque Javascript -------------->
                     <hr>
-                    {% comment %} <table  align="right" >
-                        <tr>
-                            <td> 
-                                <a href="/administrativo/agregar_persona/" class="btn btn-success">Agregar a otra persona +</a> 
-                            </td>
-                        </tr> {% endcomment %}
                        <div class="container mt-3 text-center">
                          <a href=" /panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> <i class="bi bi-house-door"></i>Inicio</a>
                         </div>
@@ -215,13 +139,16 @@
                     <table  align="left" >
                         <tr>
                             <td> 
-                                <a href="/administrativo/listar_persona/" class="btn btn-info">Ver listado de personas </a> 
+                                <a href="/administrativo/listar_persona/" class="btn btn-info">
+                                    <i class="bi bi-view-list"></i>
+                                    Ver listado de personas 
+                                </a> 
                             </td>
                         </tr>
                     </table>
                     <br>
                 </form>
-                 <br>
+                <br>
             </div>
         </div>
 </div>
