--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
@@ -28,26 +28,27 @@
                     <table class="table table-striped table-hover">
                         <thead> 
                             <tr>
+                                {%if tratamientos_asignados%}
                                     <th>Nro Tratamiento</th>
                                     <th>Nombre </th>
-                                    {% comment %} <th colspan="2">Acciones </th> {% endcomment %}
+                                {%endif%}
                             </tr>
                         </thead>
 
                         <tbody>
-                                {%for c in tratamientos_asignados%}
+                                {%if tratamientos_asignados%}
+                                {%for tratamiento in tratamientos_asignados%}
                                 <tr>
                                     <td >{{forloop.counter}}</td>
-                                    <td >{{c.nombre_tratamiento}}</td>
-                                    <!-- <td>{{c.precio}}</td>  -->
-                                    {{busqueda}}
+                                    <td >{{tratamiento}}</td>
                                     <!--OPCIONES Modificar y Eliminar-->
+                                        {%comment%}
                                         {%if perms.gestion_tratamiento.change_tratamiento%} 
                                                 <td><a href="/tratamiento/modificar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-primary">
                                                         <i class="bi-pencil-square"></i>
                                                     Modificar</a>
                                         {%endif%}
-                                <!-- Eliminar-->      
+                                        <!-- Eliminar-->      
                                 
                                         {%if perms.gestion_tratamiento.delete_tratamiento%}          
                                                     <a href="/tratamiento/eliminar_tratamiento/{{c.nombre_tratamiento}}" class="btn btn-danger btnEliminacion">
@@ -55,10 +56,23 @@
                                                         Eliminar</a> 
                                                 </td>
                                         {%endif%}
+                                        {%endcomment%}
                                             
                                 </tr>
                                 {% endfor %}
-                            
+                                {%else%}
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <center>
+                                        <h5>
+                                            <i class="bi bi-exclamation-triangle-fill"></i>
+                                            <i>El paciente no tiene tratamientos asignados</i> 
+                                            <i class="bi bi-exclamation-triangle-fill"></i>
+                                        </h5>
+                                    </center>
+                                {%endif%}
+
 
                                 {% if messages %}
                                 <ul class="messages">
@@ -76,7 +90,6 @@
                                     {% endfor %}
                                 </ul>
                                 {% endif %}
-
                         </tbody>
                     </table>
                 </table>
