--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <center> 
                         
-                    <h2 <i class="bi bi-calendar"></i> Modificar Cita</i> </h2>
+                    <h2 <i class="bi bi-calendar"></i> Modificar | Cita</i> </h2>
                 </center>
               
                
