cambie el icono de configuracion

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -99,7 +99,9 @@
                                           <!--Este modulo tendra acceso a todos los roles-->
                                           <li class="nav-item dropdown">
                                               <a class="nav-link dropdown-toggle" href="configuración " id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                              <strong style="color:blue; font-size:16px;">Configuración  </strong> 
+                                              <strong style="color:blue; font-size:14px;">
+                                                <img src="{% static 'img/configuracion.png' %}" width="40px" alt="logo">
+                                              </strong> 
                                               </a>
                                               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                   <!--Opcion-->
